--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -23,7 +23,8 @@
     "@types/react-dom": "^18.2.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "html-react-parser": "^5.2.2",
   },
   "author": "Nick Strayer",
   "license": "MIT",
